Se modifica propiedad de la memoria del servidor