@@ -51,5 +51,5 @@ rem "%JAVA_HOME%\bin\java" -Xms128M -Xmx512M -Xdebug -Xnoagent -Djava.compiler=N
 
 rem ### Simple easy to read line
 echo on
-"%JAVA_HOME%\bin\java" -Xms4096M -Xmx8192M -XX:MaxPermSize=1144M -jar ofbiz.jar > runtime\logs\console.log
+"%JAVA_HOME%\bin\java" -Xms4096M -Xmx8192M -XX:MaxMetaspaceSize=1144M -jar ofbiz.jar > runtime\logs\console.log
 
